Name:           two
Version:        0.0.1
Description:    Two executables for the price of one!
License:        PublicDomain
Author:         Jeremy Groven
Maintainer:     Jeremy Groven
Build-Type:     Simple
Cabal-Version:  >=1.2

Executable moo
  Ghc-Options:    -threaded -O2 -Wall -main-is Moo.Main.main
  Build-Depends: base >= 4 && < 5
  Main-is:        Moo/Main.hs
  hs-source-dirs: src
  other-modules: Common, Moo.Main


Executable cow
  Ghc-Options:    -threaded -O2 -Wall -main-is Cow.Main.main
  Build-Depends: base >= 4 && < 5
  Main-is:        Cow/Main.hs
  hs-source-dirs: src
  other-modules: Common, Cow.Main



